# chodo

./: .env.schema  .gitignore  NOTES.md  README.md  SCRIPTS.md  craco.config.js  eslintrc.js  package-lock.json  package.json  soprox.config.json  soprox.schema.json  tsconfig.json
cli/: account.js  balance.js  create-user.js  deploy.js  dump.js
cli/lib/: deployer.js  network.js  store.js  temp.js
cli/utils/: init.js  sleep.js
lib/: README.md  deployer.js  network.js  store.js
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
program/src/schema/: mod.rs  project_data.rs  task_data.rs  user_data.rs
program/src/state/: mod.rs  user.rs
program/src/state/utils/: serdes.rs
program_old/: do.sh
program_old/src/: entrypoint.rs  error.rs  processor.rs
program_old/src/state/: user.rs
public/: index.html
src/: app.config.json  application.tsx  index.tsx  main.tsx  solana.config.json  style.less
src/@types/buffer-layout/: index.d.ts
src/@types/sol-wallet-adapter/: index.d.ts
src/@types/soprox-abi/: index.d.ts
src/application/: application.tsx  index.ts
src/application/hooks/: use-alarm-handler.ts  use-current-alarms.ts  (+22 more)
src/client/: account.js  balance.js  dump.js  index.js
src/configs/: README.md  schema.json
src/main/: load-module.ts  load-routes.ts  main.tsx  start-application.ts
src/state/: readme.md
src/types/: sol-wallet-adapter.d.ts
src/utils/: instruction.ts  solana-config.ts  state.ts
src/utils_old/: instruction.ts  state.ts  transaction.ts
store/: abi.json  program.json
(+302 files in other folders)
