[package]
name = "chodo"
description = "A to-do list with rewards upon completing tasks."
version = "1.0.0"
authors = ["mfbz"]
edition = "2018"

[features]
default = ["solana-sdk/default"]
no-entrypoint = []
program = ["solana-sdk/program"]
skip-no-mangle = ["solana-sdk/skip-no-mangle"]

[dependencies]
solana-sdk = {version = "1.3.12", default-features = false, optional = true}
arrayref = "0.3.6"
byteorder = "1.3"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
thiserror = "1.0"

[lib]
name = "chodo"
crate-type = ["cdylib", "lib"]
